animation slide-in and slide-back

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <a href="#">Clique aqui e Descubra</a>
         </li>
         <li>
-          <a href="#">Virus Boladão</a>
+          <a href="#">Explore Nadinha</a>
         </li>
       </ul>
       <div id="social-links">
